Added color palette box and different color brush functionality (rainbow, grayscale, choice color pick, and eraser)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,29 @@
         <div class="container">
 
         </div>
+        
+        <div class="color-box">
+            <div class="row-color-box">
+                <div class="cell-color-box color-one"></div>
+                <div class="cell-color-box color-two"></div>
+            </div>
+            <div class="row-color-box">
+                <div class="cell-color-box color-three"></div>
+                <div class="cell-color-box color-four"></div>
+            </div>
+            <div class="row-color-box">
+                <div class="cell-color-box color-five"></div>
+                <div class="cell-color-box color-six"></div>
+            </div>
+            <div class="row-color-box">
+                <div class="cell-color-box color-seven"></div>
+                <div class="cell-color-box color-eight"></div>
+            </div>
+            <div class="row-color-box">
+                <div class="cell-color-box color-nine"></div>
+                <div class="cell-color-box color-ten"></div>
+            </div>
+        </div>
     </body>
 </html>
 
